docs: added SBT_OPTS example for OutOfMemory exception